# ProtonDisk

./: .gitignore  CHANGELOG.md  README.md  install.sh  pyproject.toml  uninstall.sh
docs/superpowers/plans/: 2026-07-20-milestone1-core.md  (+4 more)
packaging/: protondisk-mount.service.in  protondisk.desktop.in
protondisk/: __init__.py  cli.py
protondisk/core/: __init__.py  client.py  errors.py  models.py  progress.py  runner.py
protondisk/gui/: __init__.py  app.py  format.py  navigation.py  window.py  worker.py
protondisk/mount/: __init__.py  cache.py  fs.py  ignore.py  mounter.py  notify.py  translate.py
scripts/: bump-patch.sh  gui-smoke.py  protondisk-gui  protondisk-mount  protondisk-mount-daemon
tests/: test_cli.py  test_client_auth.py  test_client_browse.py  test_client_organize.py  test_client_progress.py  test_client_sharing.py  test_client_transfer.py  test_errors.py  test_import.py  test_models.py  test_progress.py  test_runner.py  test_runner_streaming.py
tests/gui/: test_navigation.py  test_window_builds.py  test_window_lifecycle.py  test_window_move.py  test_window_nav.py  test_window_newfolder.py  test_window_polish.py  test_window_progress.py  test_window_rename.py  test_window_share.py  test_window_states.py  test_window_status.py  test_window_transfer.py  test_window_trash.py  test_worker.py
tests/mount/: test_cache.py  test_fs_download.py  test_fs_ephemeral.py  test_fs_namespace.py  test_fs_notify_read.py  test_fs_read.py  test_fs_write.py  test_ignore.py  test_mount_cli.py  test_notify.py  test_translate.py
(+4 files in other folders)
